# kube_fridays

./: Dockerfile  README.md  pyproject.toml
mysite/: settings.py
